- new segments implemented - db updated

--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -163,6 +163,12 @@ form.webform-client-form {
   body.kscollege_section & {
     .links(@pxl-color-hso-ks);
   }
+  body.hfcollege_section & {
+    .links(@pxl-color-hso-hf);
+  }
+  body.fhcollege_section & {
+    .links(@pxl-color-hso-fh);
+  }
   body.excollege_section & {
     .links(@pxl-color-hso-ex);
   }
@@ -321,6 +327,14 @@ form.webform-client-form {
         border: 1px solid @pxl-color-hso-ks;
         .box-shadow(inset 0 0 3px @pxl-color-hso-ks);
       }
+      body.hfcollege_section & {
+        border: 1px solid @pxl-color-hso-hf;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-hf);
+      }
+      body.fhcollege_section & {
+        border: 1px solid @pxl-color-hso-fh;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-fh);
+      }
       body.excollege_section & {
         border: 1px solid @pxl-color-hso-ex;
         .box-shadow(inset 0 0 3px @pxl-color-hso-ex);
@@ -361,6 +375,12 @@ form.webform-client-form {
         }
         body.kscollege_section & {
           border: 1px solid @pxl-color-hso-ks;
+        }
+        body.hfcollege_section & {
+          border: 1px solid @pxl-color-hso-hf;
+        }
+        body.fhcollege_section & {
+          border: 1px solid @pxl-color-hso-fh;
         }
         body.excollege_section & {
           border: 1px solid @pxl-color-hso-ex;
@@ -560,6 +580,12 @@ form.webform-client-form {
       }
       body.kscollege_section & {
         .resp-submit-button(#fff, @pxl-color-hso-ks);
+      }
+      body.hfcollege_section & {
+        .resp-submit-button(#fff, @pxl-color-hso-hf);
+      }
+      body.fhcollege_section & {
+        .resp-submit-button(#fff, @pxl-color-hso-fh);
       }
       body.excollege_section & {
         .resp-submit-button(#fff, @pxl-color-hso-ex);
