--- a/all/themes/pixelgarage/less/pxlComponents/view-bildungsnavigator.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-bildungsnavigator.less
@@ -42,10 +42,10 @@ body.page-bildungsnavigator {
 
         a {
           display: inline-block;
-          margin: 0 5px;
-          padding: 0 10px;
+          margin: 0 5px 10px;
+          padding: 0 8px;
           font-family: @pxl-text-font;
-          font-size: @font-size-base + 1;
+          font-size: @font-size-base - 1;
           color: #6e6e6e;
           text-decoration: none;
           line-height: 33px;
@@ -255,6 +255,12 @@ body.page-bildungsnavigator {
   }
   .course_item.tid_3 {
     .specific-course_item(#cbc6df; @pxl-color-hso-ks);
+  }
+  .course_item.tid_108 {
+    .specific-course_item(#cbc6df; @pxl-color-hso-hf);
+  }
+  .course_item.tid_109 {
+    .specific-course_item(#cbc6df; @pxl-color-hso-fh);
   }
   .course_item.tid_4 {
     .specific-course_item(#dcd7cd; @pxl-color-hso-ex);
