--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -38,6 +38,12 @@
           body.kscollege_section & {
             color: @pxl-color-hso-ks;
           }
+          body.hfcollege_section & {
+            color: @pxl-color-hso-hf;
+          }
+          body.fhcollege_section & {
+            color: @pxl-color-hso-fh;
+          }
           body.excollege_section & {
             color: @pxl-color-hso-ex;
           }
@@ -147,6 +153,12 @@
           body.kscollege_section &:hover {
             background-color: @pxl-color-hso-ks;
           }
+          body.hfcollege_section &:hover {
+            background-color: @pxl-color-hso-hf;
+          }
+          body.fhcollege_section &:hover {
+            background-color: @pxl-color-hso-fh;
+          }
           body.excollege_section &:hover {
             background-color: @pxl-color-hso-ex;
           }
@@ -172,6 +184,14 @@
             body.kscollege_section & {
               border-top: 1px solid @pxl-color-hso-ks;
               border-bottom: 1px solid @pxl-color-hso-ks;
+            }
+            body.hfcollege_section & {
+              border-top: 1px solid @pxl-color-hso-hf;
+              border-bottom: 1px solid @pxl-color-hso-hf;
+            }
+            body.fhcollege_section & {
+              border-top: 1px solid @pxl-color-hso-fh;
+              border-bottom: 1px solid @pxl-color-hso-fh;
             }
             body.excollege_section & {
               border-top: 1px solid @pxl-color-hso-ex;
