--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -105,6 +105,20 @@ body {
             // don't show title on KS segment page
             display: none;
           }
+          body.hfcollege_section & {
+            color: @pxl-color-hso-hf;
+          }
+          body.hfcollege_section.page-taxonomy-term-108 & {
+            // don't show title on KS segment page
+            display: none;
+          }
+          body.fhcollege_section & {
+            color: @pxl-color-hso-fh;
+          }
+          body.fhcollege_section.page-taxonomy-term-109 & {
+            // don't show title on KS segment page
+            display: none;
+          }
           body.excollege_section & {
             color: @pxl-color-hso-ex;
           }
