--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -47,7 +47,7 @@ header#navbar {
   .container {
     padding: 10px @grid-gutter-width / 2 0;
 
-    @media @tablet {
+    @media @menu-breakpoint {
       padding-top: 50px;
     }
 
@@ -177,6 +177,32 @@ header#navbar {
                 }
               }
             }
+            &.menu-hf {
+              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-hf;
+
+              a:hover, a.active-trail, a.active {
+                color: @pxl-color-hso-hf;
+                background: none;
+
+                @media @tablet {
+                  color: #fff;
+                  background-color: @pxl-color-hso-hf;
+                }
+              }
+            }
+            &.menu-fh {
+              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-fh;
+
+              a:hover, a.active-trail, a.active {
+                color: @pxl-color-hso-fh;
+                background: none;
+
+                @media @tablet {
+                  color: #fff;
+                  background-color: @pxl-color-hso-fh;
+                }
+              }
+            }
             &.menu-ex {
               border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-ex;
 
@@ -287,8 +313,8 @@ header#navbar {
           ul.menu {
             li {
               a {
-                padding: 7px 35px 7px 10px;
-                font-size: 18px;
+                //padding: 7px 35px 7px 10px;
+                //font-size: 18px;
               }
             }
           }
