--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -12,6 +12,8 @@
 @pxl-color-hso-kv: rgb(149, 186, 64);
 @pxl-color-hso-hs: rgb(232, 116, 49);
 @pxl-color-hso-ks: rgb(120, 114, 159);
+@pxl-color-hso-hf: rgb(138, 133, 184);
+@pxl-color-hso-fh: rgb(100, 96, 133);
 @pxl-color-hso-ex: rgb(177, 168, 149);
 @pxl-color-hso-gray: rgb(235,235,235);
 @pxl-color-hso-kv-menu: rgb(168, 212, 73);
@@ -100,6 +102,7 @@
 @wide:    ~"screen and (min-width: @{screen-lg-min})";
 
 // special breakpoint for header items
+@menu-breakpoint:    ~"screen and (min-width: @{grid-float-breakpoint})";
 @header-breakpoint: ~"screen and (min-width: 640px)";
 
 // Media queries stacked
@@ -110,6 +113,14 @@
 //== Grid system
 //
 //## Define your custom responsive grid.
+
+//** Number of columns in the grid.
+@grid-columns:              12;
+//** Padding between columns. Gets divided in half for the left and right.
+@grid-gutter-width:         30px;
+// Navbar collapse
+//** Point at which the navbar becomes uncollapsed.
+@grid-float-breakpoint:     @screen-md-min;
 
 
 //== Container sizes
