--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -57,12 +57,24 @@
 
 //
 // responsive font sizes
-@resp-font-size:          2.8vw;
-@resp-font-size-min:      13px;
+@resp-font-size:          2vw;
+@resp-font-size-min:      14px;
 @resp-font-size-max:      17px;
-@resp-font-size-large:    5vw;
-@resp-font-size-large-min:20px;
-@resp-font-size-large-max:30px;
+
+@resp-subtitle-size:      2.6vw;
+@resp-subtitle-size-min:  15px;
+@resp-subtitle-size-max:  20px;
+
+@resp-title-size:         3.125vw;
+@resp-title-size-min:     17px;
+@resp-title-size-max:     24px;
+
+//
+// selected element font size
+@font-size-button-small:  20px;
+@font-size-button:        24px;
+@font-size-pane-title:    32px;
+@font-size-pane-subtitle: 20px;
 
 
 
